# cos-proxy-operator

./: .flake8  .gitignore  CODEOWNERS  INTEGRATING.md  README.md  SECURITY.md  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt  tox.ini
.github/: .jira_sync_config.yaml
.github/workflows/: ci.yaml  issues.yaml  issues.yml  pull-request.yaml  release-edge.yaml  release.yaml  run_tests.yaml
lib/charms/grafana_agent/v0/: cos_agent.py
lib/charms/grafana_k8s/v0/: grafana_dashboard.py
lib/charms/nrpe_exporter/v0/: nrpe_exporter.py
lib/charms/prometheus_k8s/v0/: prometheus.py  prometheus_scrape.py
lib/charms/vector/v0/: vector.py
src/: charm.py  metrics_endpoint_aggregator.py  nrpe_exporter.py  scrape_config.py  vector.py
src/cos_proxy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/grafana_dashboards/: ceph-cluster.json.tmpl  ceph-osd.json.tmpl  ceph-pools.json.tmpl  impi-sensor.json.tmpl  nrpe.json  rabbitmq.json.tmpl  swift.json.tmpl
src/prometheus_alert_rules/: vector_restarted.rule
tests/: test_charm.py
tests/integration/: assertions.py  conftest.py  test_charm_tracing.py  test_nothing.py
tests/interface/: conftest.py  test_cos_agent.py
tests/manual/: README.md  benchmark_monitors_fanout.py  juju_monitors_benchmark.py  lxd-bundle.yaml  nrpe-k8s-bundle.yaml  nrpe-lxd-bundle.yaml
tests/manual/charms/monitors-provider/: charmcraft.yaml  pyproject.toml
tests/manual/charms/scrape-consumer/: charmcraft.yaml  pyproject.toml
tests/manual/charms/scrape-consumer/src/: charm.py
tests/manual/topologies/: README.md  cos-proxy-SAAS-bundle.yaml  cos-proxy-gagent-bundle.yaml
tests/scenario/: helpers.py  test_alerts.py  test_charm.py
tests/unit/: helpers.py  test_alerts.py  test_charm.py  test_charm_scenario.py  test_endpoint_aggregator.py  test_outgoing_relation_data.py  test_relation_monitors.py
(+1 files in other folders)
